cmake_minimum_required(VERSION 3.9)
project(Md_Abu_Joni_1606072_Assignment1)

set(CMAKE_CXX_STANDARD 11)

add_executable(Md_Abu_Joni_1606072_Assignment1
        ex2/BarGraph.cpp
        ex2/BarGraph.h
        cmake-build-debug/hamlet.txt
        ex2/Main.cpp
        ex2/ReadWords.cpp
        ex2/ReadWords.h
        Time/Time.cpp
        Time/Time.h)
